# SkyPasta

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  FlirCamera.cpp  FlirCamera.h  ImageRetriever.cpp  ImageRetriever.h  ImageTag.cpp  ImageTag.h  LinkedList.h  Makefile  README.md  Telemetry.cpp  Telemetry.h  main.cpp
NGINX/: Dockerfile  README.md  app.conf
include/exiv2/: exv_conf.h
src/: FlirCamera.cpp  FlirCamera.h  GenericUSBCamera.cpp  GenericUSBCamera.h  ImageRetriever.cpp  ImageRetriever.h  ImageTag.cpp  ImageTag.h  Telemetry.cpp  Telemetry.h  main.cpp
tools/: fakelogname.sh
